# navigation_ws

./: .gitignore  README.md
src/: CMakeLists.txt  README.md
src/auto_nav2d_pipeline/: package.xml
src/auto_nav2d_pipeline/data/: 1.json  2.json  3.json  4.json
src/auto_nav2d_pipeline/script/: TaskTransfer.py
src/auto_nav2d_pipeline/tool/: location_record.py
src/autonomy/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/autonomy/include/autonomy/: autonomy.h
src/autonomy/src/: autonomy.cc  autonomy.cpp  bt_example.cpp
src/csc_navigation_2d/: README.md
src/csc_navigation_2d/csc_nav2d_msgs/: CMakeLists.txt
src/csc_navigation_2d/csc_nav2d_navigator/: CMakeLists.txt  package.xml
src/csc_navigation_2d/csc_nav2d_navigator/src/: RobotNavigator.cpp  navigator.cpp  set_goal_client.cpp  set_goal_track_ball.cpp  velodyne_ObstaclesDetect.cpp
src/csc_navigation_2d/csc_nav2d_operator/: CMakeLists.txt
src/csc_navigation_2d/csc_nav2d_operator/src/: RobotOperator.cpp  node.cpp
src/csc_navigation_2d/csc_nav2d_working/: CMakeLists.txt  package.xml
src/csc_navigation_2d/csc_nav2d_working/launch/: auto_navigation.launch  ball_track_navigation.launch  lidar_imu_device.launch  navigation.launch  run_navigation.launch
src/csc_navigation_2d/csc_nav2d_working/param/: autoNavigate_goal.yaml  costmap_common_params.yaml  global_costmap_params_scan_rs.yaml  navigator.yaml  operator.yaml  ros.yaml
src/csc_navigation_2d/csc_nav2d_working/python/: show_data.py
src/csc_navigation_2d/csc_nav2d_working/python/rviz/: myCar.rviz  myCar2.rviz  navigation.rviz
src/csc_navigation_2d/csc_nav2d_working/rviz/: navigation.rviz
src/csc_navigation_2d/csc_nav2d_working/scripts/: _init_paths.py  autoNavigate.py  listener.py
src/driver/firmware/: nav_imu_urdf.mzw  navigation_mini  navigation_mti  wrc1127_mti  wrc_ysense
src/driver/message_transformer/: README.md
src/driver/message_transformer/config/: rule.json
src/driver/message_transformer/script/: message_transformer.py
src/driver/message_transformer/src/: message_transformer.py
src/driver/message_transformer/test/: test_topic_to_udp.py  test_udp_to_topic.py
src/driver/message_transformer_cpp/: CMakeLists.txt  package.xml
src/driver/message_transformer_cpp/launch/: message_transformer_cpp.launch
src/driver/message_transformer_cpp/src/: moving_average.cpp  qnx2ros.cpp  receiver.cpp  ros2qnx.cpp  sender.cpp
src/driver/qnx2ros/: CMakeLists.txt  package.xml
src/driver/qnx2ros/include/moving_average/: moving_average.h
src/driver/qnx2ros/src/: moving_average.cpp  receive_robot_status_node.cpp
src/driver/ros2qnx/: CMakeLists.txt  package.xml
src/driver/ros2qnx/launch/: ros2qnx.launch
src/driver/ros2qnx/src/: udpThread.cpp
src/hdl_localization/launch/: hdl_localization.launch
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: ndt.yaml
src/localization/hdl_localization/apps/: hdl_localization_nodelet.cpp
src/localization/hdl_localization/include/hdl_localization/: pose_system.hpp
src/localization/hdl_localization/launch/: hdl_localization.launch
src/localization/include/ndt_localization/: ndt_localization.h  user_protocol.h  utils.hpp
src/localization/launch/: ndt_localization.launch
src/localization/map/: map12.pcd  map12.pgm  map24.pcd  map24.pgm  map24.yaml  map26.pcd  map26.pgm  map26.yaml  new430.pcd  new430.pgm  new430.yaml  wrc.pcd  wrc.pgm  wrc.yaml
src/localization/ndt_localization/: CMakeLists.txt
src/localization/ndt_localization/include/ndt_localization/: ndt_localization.h
src/localization/ndt_localization/launch/: ndt_localization.launch
src/localization/ndt_localization/map/: 117map.pgm  117map.yaml  map12.yaml
src/localization/ndt_localization/src/: ndt_localization_node.cpp
src/localization/params/: test.yaml
src/localization/src/: ndt_localization_node.cpp
src/localization/tools/: map_viewer.py
src/mapping/ndt_cpu/src/: NormalDistributionsTransform.cpp  Octree.cpp  Registration.cpp  VoxelGrid.cpp
src/mapping/ndt_mapping/: CMakeLists.txt  package.xml
src/mapping/ndt_mapping/launch/: ndt_mapping.launch
src/mapping/ndt_mapping/params/: params_ndt_mapping.yaml
src/mini/urdf/: mini.urdf
src/model/robot_control/: CMakeLists.txt
src/models/mini/: CMakeLists.txt
src/nav_pipeline/: CMakeLists.txt  README.md
src/nav_pipeline/script/: RobotCommander.py  Task.py  TaskPoint.py  TaskTransfer.py
src/nav_pipeline/tool/: location_record.py  record_current_pose.py  test.py
src/nav_teb/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/nav_teb/launch/: nav_sbpl.launch  nav_teb.launch
src/nav_teb/rviz/: nav_teb.rviz
src/navigation/: CMakeLists.txt
src/navigation/config/: costmap_common_params.yaml  local_costmap_params.yaml
src/navigation/launch/: nav_sbpl.launch
src/navigation/nav/: CMakeLists.txt  package.xml
src/navigation/nav_teb/: package.xml
src/navigation/pointcloud_to_laserscan/: CMakeLists.txt
src/navigation/rviz/: nav_teb.rviz
src/navigation/sbpl_lattice_planner/: CMakeLists.txt
src/navigation/spatio_temporal_voxel_layer/: CMakeLists.txt  package.xml
src/pipeline/: CMakeLists.txt
src/pipeline/action/: MoveToPosition2D.action
src/pipeline/data/: 1.json  2.json  3.json
src/pipeline/data_map24/: 4.json  5.json
src/pipeline/data_map26/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/pipeline/data_wrc/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
src/pipeline/script/: RobotCommander.py  Task.py  TaskTransfer.py
src/pipeline/scripts/: RecognizeServer.py  RobotCommander.py  Task.py  TaskPoint.py  TaskTransfer.py  dyn_reconfigure.py
src/pipeline/tool/: location_record.py  record_current_pose.py
src/pipeline/tools/: location_record.py
src/qnx2ros/launch/: qnx2ros.launch
src/robot_control/: package.xml
src/robot_control/launch/: robot_rviz_simulation.launch
src/robot_control/src/: jointpublish.cpp
src/ros2qnx/src/: udpServer_node.cpp
(+132 files in other folders)
