<?xml version="1.0"?>
<package>

  <name>csc_nav2d_working</name>
  <version>0.3.2</version>
  <description>
    Contains a set of tutorials that run 2D-Navigation within Stage-Simulator.
  </description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/csc_nav2d_tutorials</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>csc_nav2d_msgs</run_depend>
  <run_depend>csc_nav2d_operator</run_depend>
  <run_depend>csc_nav2d_navigator</run_depend>
  <run_depend>csc_nav2d_remote</run_depend>


</package>
